--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   release:
     if: github.event.pull_request.merged == true
+    environment: Release
     steps:
       - name: Create release
         run: |
