Use output from changelog step for release notes

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,10 +23,10 @@ jobs:
           version=${branch/release\/v/}
           echo "::set-output name=result::$version"
       - name: read latest version from the changelog
-        id: next-release-from-changelog
+        id: release-notes
         uses: mattwynne/changelog-action@v1.2
         with:
-          args: show ${{ steps.version.outputs.result }} -o ${{ runner.temp }}/latest.md
+          args: show ${{ steps.version.outputs.result }}
       - name: Create release
         run: |
-          gh release create v${{ steps.version.outputs.result }} -F ${{ runner.temp }}/latest.md
+          gh release create v${{ steps.version.outputs.result }} --notes "${{ steps.release-notes.outputs.output}}"
