--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,11 +24,13 @@ jobs:
           echo "::set-output name=result::$version"
       - name: read latest version from the changelog
         id: release-notes
-        uses: mattwynne/changelog-action@v1.2
+        uses: mattwynne/changelog-action@v1.3
         with:
-          args: show ${{ steps.version.outputs.result }} -o ${{ runner.temp }}/notes
+          args: show ${{ steps.version.outputs.result }}
       - name: Create release
         run: |
-          notes=$(cat ${{ runner.temp }}/notes)
+          notes=<<EOT
+          ${{ steps.release-notes.outputs.result }}
+          EOT
           echo "$notes"
           gh release create v${{ steps.version.outputs.result }} --notes "$notes"
