--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,8 +29,7 @@ jobs:
           args: show ${{ steps.version.outputs.result }}
       - name: Create release
         run: |
-          notes=<<EOT
+          cat >${{ runner.temp }}/notes <<EOT
           ${{ steps.release-notes.outputs.result }}
           EOT
-          echo "$notes"
-          gh release create v${{ steps.version.outputs.result }} --notes "$notes"
+          gh release create v${{ steps.version.outputs.result }} --notes-file ${{ runner.temp }}/notes
